# hft-matlab-fpga

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.cross-armhf  Dockerfile.matlab  Makefile  README.md
cpp/: CMakeLists.txt
cpp/src/: fast_data_feed.cpp  fast_receiver.cpp  fpga_benchmark.cpp  fpga_shared_stream.h
cpp/src/templates/: SimpleMD.xml
cpp/tests/: fpga_shared_stream_test.cpp
docs/: arm-fpga-shared-memory-stream.md  cross-build-angstrom.md  de10-nano-quartus-integration.md  implementation-plan-order-book-and-matlab.md  tutorial-de10-nano-feed-to-fpga.md  tutorial-quartus-pins-reset-hps.md
docs/latex/: configuracoes.tex  main.acn2  main.acr2  main.alg2  main.alg3  main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.glg  main.glo  main.gls  main.ilg  main.ist  main.loc  main.lod  main.lof  main.loh  main.lot  main.tex  main.toc  pdfa.xmpi  utfpr.cls  variaveis.tex
docs/latex/PosTexto/: apendicea.aux  apendicea.tex  apendiceb.aux  apendiceb.tex  entradas-glossario.tex
docs/latex/PreTexto/: abstract.aux  abstract.tex  agradecimentos.aux  agradecimentos.tex  declaracao-ia.aux  declaracao-ia.tex  dedicatoria.aux  dedicatoria.tex  entradas-siglas.tex  epigrafe.aux  epigrafe.tex  lista-acronimos.aux  lista-acronimos.tex  lista-simbolos.aux  lista-simbolos.tex  resumo.aux  resumo.tex
docs/latex/capitulos/: cap-conceitos.aux  cap-conceitos.tex  cap-conclusoes.aux  cap-conclusoes.tex  cap-experimentos-resultados.aux  cap-experimentos-resultados.tex  cap-introducao.aux  cap-introducao.tex  cap-metodologia.aux  cap-metodologia.tex  cap-proposta.aux  cap-proposta.tex  cap-trabalhos-relacionados.aux  cap-trabalhos-relacionados.tex
docs/latex/figuras/mermaid/: arquitetura-geral.mmd  diagrama-blocos-sistema.mmd  filas-arm-fpga.mmd  fluxo-hls-estrategia.mmd  fluxo-temporal-evento.mmd  livro-ofertas.mmd  pipeline-livro.mmd
matlab/: hdl_generator.m  hft.prj  strategy.m  strategy_tb.m  trade_decision_model.m  trade_decision_model_tb.m
patches/: mfast-armv7-boost-hash.patch
quartus/: hft_trade_engine_avalon_mm_hw.tcl
quartus/de10_nano_hft/: .gitignore  de10_nano_hft.qpf  de10_nano_hft.qsf  hft.qsys
toolchains/: arm-linux-gnueabihf-sysroot.cmake
vhdl/: arm_fpga_shared_stream_bridge.vhd  book_strategy_core.vhd  generated_strategy_core.vhd  hft_trade_engine.vhd  hft_trade_engine_avalon_mm.vhd  order_book_core.vhd  strategy_fallback.vhd  tb_arm_fpga_shared_stream_bridge.vhd  tb_arm_fpga_shared_stream_bridge_fast.vhd  tb_generated_strategy_core.vhd  tb_hft_trade_engine.vhd  tb_hft_trade_engine_avalon_mm.vhd  tb_order_book_core.vhd  trade_decision_core.vhd
